tests/paczka1/fuzzy1/19779054.err
Error in line 9: S2YBl5oTD A768 68,3
Error in line 13: S/YBl5oTD S937 /3/,6
Error in line 3: pKyLd S1 73,8
Error in line 10: S2YBl5oTD S937 62,2
Error in line 5: oZdF1Wd A768 51,2
Error in line 23: pKyLd S937 55,9
Error in line 33: pKyLd A768 -2,1
Error in line 32: pKyLd A768 46,7
Error in line 26: A768 S264 207,8
